# prophet

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  prophet  prophet.ttl
prophet-cli/: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASING.md  pyproject.toml
prophet-cli/scripts/: benchmark_noop_generation.py
prophet-cli/src/prophet_cli/: __main__.py  cli.py
prophet-cli/src/prophet_cli/codegen/: __init__.py  artifacts.py  cache.py  contracts.py  pipeline.py  rendering.py  stack_manifest.py  stacks.py
prophet-cli/src/prophet_cli/core/: __init__.py  compatibility.py  config.py  constants.py  errors.py  ir.py  ir_reader.py  materialize.py  models.py  parser.py  validation.py
prophet-cli/src/prophet_cli/targets/: runtime_versions.py
prophet-cli/src/prophet_cli/targets/java_common/: __init__.py
prophet-cli/src/prophet_cli/targets/java_common/render/: __init__.py  support.py
prophet-cli/src/prophet_cli/targets/java_spring_jpa/: __init__.py  generator.py
prophet-cli/src/prophet_cli/targets/java_spring_jpa/render/: __init__.py  spring.py
prophet-cli/src/prophet_cli/targets/java_spring_jpa/render/common/: __init__.py  actions_runtime.py  contracts.py  domain.py  transitions_runtime.py
prophet-cli/src/prophet_cli/targets/java_spring_jpa/render/orm/: __init__.py  jpa_persistence.py  jpa_query.py
prophet-cli/src/prophet_cli/targets/node_express/: __init__.py  autodetect.py  generator.py
prophet-cli/src/prophet_cli/targets/node_express/render/: support.py
prophet-cli/src/prophet_cli/targets/node_express/render/common/: action_handlers.py  action_routes.py  action_service.py  actions.py  domain.py  event_contracts.py  events.py  index_file.py  package_files.py  persistence.py  query.py  transitions.py  validation.py
prophet-cli/src/prophet_cli/targets/node_express/render/orm/: mongoose.py  prisma.py  typeorm.py
prophet-cli/src/prophet_cli/targets/python/: __init__.py  autodetect.py  generator.py
prophet-cli/src/prophet_cli/targets/python/render/: support.py
prophet-cli/src/prophet_cli/targets/python/render/common/: action_handlers.py  action_service.py  actions.py  domain.py  event_contracts.py  events.py  persistence.py  (+2 more)
prophet-cli/src/prophet_cli/targets/turtle/: __init__.py
prophet-cli/src/prophet_cli/targets/turtle/render/: __init__.py  turtle.py
prophet-cli/tests/: test_cli_integration.py  test_codegen_artifacts.py  test_codegen_cache.py  test_codegen_pipeline.py  test_codegen_snapshots.py  test_core_delegation.py  test_core_ir_reader.py  test_dsl_features.py  test_generator_registry.py  test_java_target_ir_reader.py  test_node_targets.py  test_python_targets.py  test_semantic_contracts.py  test_sql_display_indexes.py  test_stack_manifest.py  test_stack_matrix.py  test_turtle_target.py  test_version_sync.py
prophet-lib/python/: README.md  pyproject.toml
prophet-lib/python/src/prophet_events_runtime/: __init__.py  publisher.py  validation.py  wire.py
prophet-lib/python/tests/: test_runtime.py
(+192 files in other folders)
