[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "prophet-cli"
version = "0.1.0"
description = "Prophet ontology tooling CLI"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
prophet = "prophet_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
