[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prophet-events-runtime"
version = "0.2.7"
description = "Shared Prophet event publisher runtime"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Prophet" }]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
